[package]
name = "hdd"
version = "0.1.0"
edition = "2021"
authors = ["wjun"]
description = "One-click deployment of hadoop cluster based on docker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.13"